--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a:active {
     color: black;
 }
 
+a:after {
+    color: lime;
+}
+
 /*Main heading style*/
 #headerMain{
     color: black;
@@ -102,4 +106,86 @@ a:active {
     background-color: rgb(23,76,200);
     color: #00FFFF;
     border-color: purple;
+}
+
+/* building a pure css lightbox*/
+div.lightbox {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+div.lightbox:target {
+    display: table;
+}
+
+div.lightbox figure {
+    display: table-cell;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+}
+
+div.lightbox figure figcaption {
+    display: block;
+    margin: auto;
+    padding: 8px;
+    background-color: #ddbbff;
+    height: 250px;
+    position: relative;
+    overflow: auto;
+    border: 1px #000000 solid;
+    border-radius: 10px;
+    text-align: justify;
+    font-size: 14px;
+}
+
+div.lightbox figure .closeButton {
+    display: block;
+    margin: auto;
+    height: 0;
+    overflow: visible;
+    text-align: right;
+    z-index: 10;
+}
+
+div.lightbox figure .closeButton, div.lightbox figure figcaption {
+    width: 300px;
+}
+
+.closeButton::after {
+    content: "\00D7";
+    display: inline-block;
+    position: relative;
+    right: -20px;
+    top: -10px;
+    z-index: 3;
+    color: #ffffff;
+    border: 1px #ffffff solid;
+    border-radius: 10px;
+    width: 20px;
+    height: 20px;
+    line-height: 18px;
+    text-align: center;
+    margin: 0;
+    background-color: #000000;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.closeButton::before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.85;
 }
