--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a:active {
     color: black;
 }
 
-a:after {
+a:focus {
     color: lime;
 }
 
@@ -79,6 +79,9 @@ a:after {
 
 /*header navigation bar*/
 .headerNavBar {
+    display: grid;
+    grid-template-columns: 50px 1070px 75px 65px 75px;
+    /* grid-auto-columns: minmax(50px, 300px); /*minimum size for column = 100px, maximum = fit content*/
     border: 1px solid black;
     background-color: skyblue;
     height: 36px;
@@ -99,6 +102,18 @@ a:after {
     border: 2px solid blue;
     text-decoration-color: darkblue;
     background-color: lightblue;
+}
+
+.homeButton {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.newsfeedButton {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
 }
 
 /*colors can be defined by rgb funciton, hex value, or name (140 possible)*/
@@ -151,7 +166,7 @@ div.lightbox figure .closeButton {
     height: 0;
     overflow: visible;
     text-align: right;
-    z-index: 10;
+    z-index: 10; /*determine the ordering of overlapping items (higher == infront)*/
 }
 
 div.lightbox figure .closeButton, div.lightbox figure figcaption {
