--- a/style.css
+++ b/style.css
@@ -79,13 +79,27 @@ a:focus {
 
 /*header navigation bar*/
 .headerNavBar {
-    display: grid;
-    grid-template-columns: 50px 1070px 75px 65px 75px;
-    /* grid-auto-columns: minmax(50px, 300px); /*minimum size for column = 100px, maximum = fit content*/
+    display: flex;
+    /*grid-template-columns: repeat(4, 1fr);
+     grid-auto-columns: minmax(50px, 300px); /*minimum size for column = 100px, maximum = fit content*/
     border: 1px solid black;
     background-color: skyblue;
     height: 36px;
-    text-align: right;
+    flex-flow: row wrap;
+}
+
+.horizontal-container {
+    display: flex;
+    width: 300px;
+    flex-flow: row wrap;
+}
+
+.fixed-size {
+    flex: none;
+    width: 100px;
+    background-color: black;
+    color: white;
+    text-align: center;
 }
 
 /*button in the toolbars*/
@@ -105,15 +119,15 @@ a:focus {
 }
 
 .homeButton {
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 0;
+    grid-column-end: 1;
 }
 
-.newsfeedButton {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 1;
+.mainToolBarButtons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-start: 4;
+    grid-column-end: 5;
 }
 
 /*colors can be defined by rgb funciton, hex value, or name (140 possible)*/
