--- a/style.css
+++ b/style.css
@@ -80,26 +80,17 @@ a:focus {
 /*header navigation bar*/
 .headerNavBar {
     display: flex;
-    /*grid-template-columns: repeat(4, 1fr);
-     grid-auto-columns: minmax(50px, 300px); /*minimum size for column = 100px, maximum = fit content*/
     border: 1px solid black;
     background-color: skyblue;
     height: 36px;
     flex-flow: row wrap;
+    border-radius: 10px;
 }
 
 .horizontal-container {
     display: flex;
     width: 300px;
     flex-flow: row wrap;
-}
-
-.fixed-size {
-    flex: none;
-    width: 100px;
-    background-color: black;
-    color: white;
-    text-align: center;
 }
 
 /*button in the toolbars*/
@@ -109,6 +100,7 @@ a:focus {
     text-decoration: none;
     padding: 1em;
     margin: 0px;
+    border-radius: 10px;
 }
 
 .toolBarButton:hover{
@@ -118,9 +110,10 @@ a:focus {
     background-color: lightblue;
 }
 
-.homeButton {
-    grid-column-start: 0;
-    grid-column-end: 1;
+.toolBarButton-wrapper {
+    flex: none;
+    width: auto;
+    text-align: center;
 }
 
 .mainToolBarButtons {
