--- a/source/global/css/style.css
+++ b/source/global/css/style.css
@@ -2,6 +2,14 @@
     background-color: #005cbf;
 }
 
+/*Navigation Bar*/
+.navbar-fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
 .nav-item {
     padding-right: 3px;
     padding-left: 3px;
@@ -9,16 +17,19 @@
 }
 .nav-item:hover {
     background-color: dodgerblue;
+    color: #ffffff;
 }
-
-.nav-link {
-    color: rgba(255,255,255,1) !important;
+.active {
+    padding-right: 3px;
+    padding-left: 3px;
+    border-radius: 5px;
+    background-color: dodgerblue;
+    color: #ffffff;
 }
 
 .dropdown .dropdown-menu{
     padding: .5rem;
 }
-
 .dropdown-menu a {
     padding: 10px;
 }
@@ -26,7 +37,6 @@
 .dropdown-item {
     transition: 300ms;
 }
-
 .dropdown-item:hover {
     background-color: #005cbf;
     color: rgba(255,255,255,1);
@@ -35,6 +45,75 @@
     border-radius: 5px;
     opacity: 1;
 }
+
+.nav-link {
+    color: rgba(255,255,255,1) !important;
+    font-size: 19px;
+}
+/* /Navigation Bar*/
+
+body {
+    position: relative;
+    padding-top: 60px; /*Add the height of the navbar to the top of the body, so that the nav isn't covering any content*/
+}
+h1 {
+    color: #005cbf;
+    margin-bottom: 16px;
+}
+h3 {
+    color: dodgerblue;
+    margin-bottom: 16px;
+}
+hr {
+    margin-top: 0;
+    border-color: grey;
+}
+
+/*Sections*/
+.section {
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.content {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+
+.lead-in {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 21px;
+    color: #727878;
+}
+
+.profile-section {
+    color: #727878;
+    background-color: #ffffff;
+}
+.profile-picture {
+    height: 188px;
+    width: 188px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    margin: 50px;
+}
+
+.education-section {
+    color: #fff;
+    background-color: lightgrey;
+}
+
+.experience-section {
+    color: #727878;
+    background-color: #ffffff;
+}
+
+
+/* /Sections*/
+
 
 .footer {
     position: fixed;
@@ -138,7 +217,7 @@ a {
     grid-column-end: 5;
 }
 
-/*colors can be defined by rgb funciton, hex value, or name (140 possible)*/
+/*colors can be defined by rgb function, hex value, or name (140 possible)*/
 #para2 {
     background-color: rgb(23,76,200);
     color: #00FFFF;
